# arcmindai

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GoodQuestions.md  LICENSE  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
.github/workflows/: assign-owner.yml  backend-dev.yml  backend.yml  deploy-new.yml  dev.yml  local-test.yml  old-prod-update.yml  prod.yml
diagram/: architecture.drawio  chainofthoughts.drawio  superalignment.drawio
interact/: ask.sh  query.sh  update.sh
prompts/: initial.txt
samples/: 7-best-ways-learning-motoko.mhtml  7days-plan-learning-dfinity-ic.mhtml  7days-plan-learning-dfinity-internet-computer.mhtml  7days-plan-learning-rust.mhtml  aistartup-primary-sec-colors.mhtml  au-interest-rate-brisbane-housing-market.mhtml  au-voice-referenum.mhtml  beamfi-stream-payment.mhtml  current-us-interest-rate.mhtml  explain-benefits-vitamin-d.mhtml  most-popular-programming-language.mhtml  predict-au-interestrate.mhtml  predict-future-us-interest-rate.mhtml  top3-headline-news.mhtml  top4-pro-chainofthoughts.mhtml  top5-difference-between-ic-and-ethereum-2.mhtml  top5-difference-between-ic-and-ethereum.mhtml  weather-forecast-goldcoast.mhtml  what-is-current-weather-brisbane.mhtml  workaround-browse_website_issue.mhtml
scripts/: add-ic-identity.sh  ask.sh  beamfi_sample.sh  deploy_brain.sh  deploy_controller.sh  deploy_cycles_battery.sh  deploy_tools.sh  ledger_sample.script  ledger_sample.sh  provision-instance.sh  provision.sh  query.sh  topup-canisters.sh  update.sh  update_controller_owner.sh  useful.sh
src/arcmindai_backend/: Cargo.toml
src/arcmindai_backend/src/: lib.rs
src/arcmindai_brain/: Cargo.toml  arcmindai_brain.did
src/arcmindai_brain/src/: datatype.rs  httputil.rs  lib.rs  tokenutil.rs
src/arcmindai_controller/: Cargo.toml  arcmindai_controller.did
src/arcmindai_controller/src/: beamfi_stream.rs  datatype.rs  goal.rs  lib.rs  memory.rs  plugin_types.rs  prompts.rs
src/arcmindai_frontend/src/: index.html  index.js
src/arcmindai_tools/: Cargo.toml  arcmindai_tools.did
src/arcmindai_tools/src/: config.rs  lib.rs  util.rs
src/cycles_battery/: Cargo.toml  cycles_battery.did
src/cycles_battery/src/: datatype.rs  lib.rs  memory.rs
src/declarations/arcmindai_backend/: index.d.ts  index.js
src/declarations/arcmindai_controller/: index.d.ts  index.js
src/declarations/arcmindai_frontend/: index.d.ts  index.js
