[package]
name = "arcmindai_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-macros = "0.6.0"
serde = { version = "1.0.152", features = ["derive"]}
ciborium = "0.2"
ic-stable-structures = "0.5.6"
ic-cdk-timers = "0.1.0"
tinytemplate = "1.2.1"
time = { version = "0.3.28", features = ["macros", "formatting"] }

[build-dependencies]
candid = "0.8"
ic-cdk = "0.7"
